Fixing vertical / horizontal alignment and  some text styles

--- a/assets/js/react/index.css
+++ b/assets/js/react/index.css
@@ -10,7 +10,6 @@ body {
   background-color: #4B4662 !important;
   color: #fff !important;
   font-family: Inter, Helvetica, Arial, sans-serif !important;
-  min-height: 100vh;
 }
 
 .hotto-th {
